--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "~8.0.1",
     "@asymmetrik/ngx-leaflet": "^5.0.2",
     "@types/leaflet": "^1.5.8",
+    "@types/mapbox-gl": "^1.10.2",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
+    "mapbox-gl": "^1.10.1",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
